--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <title>github pull request test</title>
   </head>
   <body>
-    <nav></nav>
+    <nav>2號編輯</nav>
     <ul>
-      <li></li>
-      <li></li>
-      <li></li>
+      <li>1</li>
+      <li>2</li>
+      <li>3</li>
     </ul>
-    <header></header>
+    <header>Hello, ji</header>
     <main></main>
     <footer></footer>
   </body>
